# python_raytracer

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/raytracer/: Camera.py  Color.py  Ray.py  Render.py  Scene.py  __init__.py  main.py
src/raytracer/objects/: RenderObject.py  Sphere.py  __init__.py
src/raytracer/objects/lights/: Light.py  PointLight.py  __init__.py
